--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,6 @@
 @import "./libs/normalize";
 @import "./variables";
 
-body {
-  background-color: #000;
-}
-
 .container {
   max-width: 1173px;
   margin: 0 auto;
@@ -12,16 +8,45 @@ body {
   left: 0;
 }
 
+.main {
+  &__title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 67px;
+
+    color: $black;
+  }
+  &__subtitle {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 12.6px;
+    line-height: 26px;
+    letter-spacing: 6px;
+    text-transform: uppercase;
+
+    color: #f61067;
+  }
+}
+
 /* header
-===========================*/
+======================================================*/
 
 .header {
   background: url("../assets/bg.png") center no-repeat;
   background-size: cover;
   min-height: 828px;
+
+  /*header inner*/
+  &__inner {
+    display: grid;
+    grid-template-columns: 690px 400px;
+    grid-template-rows: 1fr 167px;
+    padding-top: 252px;
+  }
+  /*header intro*/
   &__intro {
-    max-width: 690px;
-    padding: 252px 0 70px 0;
+    margin-bottom: 70px;
   }
   &__title {
     font-style: normal;
@@ -43,14 +68,64 @@ body {
     text-transform: uppercase;
     color: $white;
   }
+  /*header subintro*/
   &__subintro {
-    margin-right: 43px;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 29px;
     display: flex;
-    align-items: center;
-    color: $white;
+    grid-area: 2/1/2/1;
+    align-self: start;
+
+    &-text {
+      margin-right: 43px;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 29px;
+      display: flex;
+      align-items: center;
+      color: $white;
+    }
+    &-btn {
+      padding: 15px;
+      background: rgba(196, 196, 196, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      border-radius: 50%;
+
+      cursor: pointer;
+      &:hover {
+        background: darken(rgba(196, 196, 196, 0.05), 50%);
+      }
+      &:active {
+        background: lighten(rgba(196, 196, 196, 0.05), 50%);
+      }
+    }
+  }
+
+  /*header scroll*/
+  &__scroll {
+    display: grid;
+    justify-self: end;
+    grid-area: 1/2/1/2;
+    transform: rotate(90deg);
+
+    &-btn {
+      display: flex;
+      max-height: 50px;
+      background: none;
+      border: 0;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 12.6px;
+      line-height: 26px;
+      letter-spacing: 6px;
+      text-transform: uppercase;
+      color: $white;
+      cursor: pointer;
+      img {
+        border: 1px solid $white;
+        border-radius: 15px;
+        padding: 6px 10px;
+        margin-left: 35px;
+      }
+    }
   }
 }
 
@@ -65,6 +140,7 @@ body {
 
   z-index: 10;
 }
+/*header logo*/
 .logo {
   display: inline-block;
 
@@ -78,7 +154,7 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
-
+/*header-nav list*/
 .nav__list {
   display: flex;
   color: $white;
@@ -99,11 +175,13 @@ body {
     }
   }
 }
-
+/*header-nav contact*/
 .contact {
   display: flex;
   align-items: center;
   &__tel {
+    margin-right: 100px;
+
     font-weight: 800;
     font-size: 14.4px;
     line-height: 30px;
@@ -114,5 +192,78 @@ body {
   }
   img {
     margin-right: 18px;
+  }
+}
+
+/* header menu btn*/
+.header__menu {
+  cursor: pointer;
+  .menu__bar-1,
+  .menu__bar-2 {
+    width: 27px;
+    height: 2px;
+    background-color: #fff;
+    margin: 5px 0;
+    transition: 0.4s;
+  }
+
+  .menu__bar-3 {
+    float: right;
+    width: 18px;
+    height: 2px;
+    background-color: #fff;
+
+    transition: 0.4s;
+  }
+}
+
+/*intro
+=========================================================*/
+
+.intro {
+  margin-top: 180px;
+  margin-bottom: 117px; 
+  &__text {
+    max-width: 754px;
+    margin-bottom: 78px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 27px;
+    line-height: 40px;
+
+    color: $black;
+  }
+
+  &__list {
+    display: flex;
+    .list__item {
+      max-width: 362px;
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
+      &-icon {
+        margin-bottom: 18px;
+      }
+      &-title {
+        margin-bottom: 13px;
+
+        font-style: normal;
+        font-weight: 500;
+        font-size: 27px;
+        line-height: 40px;
+
+        color: $black;
+      }
+      &-text {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16.2px;
+        line-height: 26px;
+
+        color: $grey;
+      }
+    }
   }
 }
