--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./libs/normalize";
 @import "./variables";
+@import "./fonts";
 
 .container {
   max-width: 1173px;
@@ -10,16 +11,16 @@
 
 .main {
   &__title {
+    font-family: "Mplus1pMedium";
     font-style: normal;
-    font-weight: 500;
     font-size: 45px;
     line-height: 67px;
 
     color: $black;
   }
   &__subtitle {
+    font-family: "Mplus1pExtraBold";
     font-style: normal;
-    font-weight: 800;
     font-size: 12.6px;
     line-height: 26px;
     letter-spacing: 6px;
@@ -40,7 +41,7 @@
   /*header inner*/
   &__inner {
     display: grid;
-    grid-template-columns: 690px 400px;
+    grid-template-columns: 777px 338px;
     grid-template-rows: 1fr 167px;
     padding-top: 252px;
   }
@@ -49,8 +50,8 @@
     margin-bottom: 70px;
   }
   &__title {
+    font-family: "Mplus1pBlack";
     font-style: normal;
-    font-weight: 900;
     font-size: 99px;
     line-height: 118px;
     color: $white;
@@ -61,7 +62,7 @@
   &__subtitle {
     margin-bottom: 18px;
 
-    font-weight: 800;
+    font-family: "Mplus1pExtraBold";
     font-size: 14.4px;
     line-height: 30px;
     letter-spacing: 4px;
@@ -76,7 +77,8 @@
 
     &-text {
       margin-right: 43px;
-      font-weight: normal;
+
+      font-family: "Mplus1p ";
       font-size: 18px;
       line-height: 29px;
       display: flex;
@@ -111,8 +113,9 @@
       max-height: 50px;
       background: none;
       border: 0;
+
+      font-family: "Mplus1pExtraBold";
       font-style: normal;
-      font-weight: 800;
       font-size: 12.6px;
       line-height: 26px;
       letter-spacing: 6px;
@@ -147,7 +150,8 @@
   margin-right: 187px;
 
   color: $white;
-  font-weight: 900;
+
+  font-family: "Mplus1pBlack";
   font-size: 24px;
   line-height: 43px;
   letter-spacing: 2px;
@@ -161,7 +165,8 @@
   margin-right: 98px;
   li {
     margin-right: 54px;
-    font-weight: 800;
+
+    font-family: "Mplus1pExtraBold";
     font-size: 14.4px;
     line-height: 30px;
     letter-spacing: 2px;
@@ -182,7 +187,7 @@
   &__tel {
     margin-right: 100px;
 
-    font-weight: 800;
+    font-family: "Mplus1pExtraBold";
     font-size: 14.4px;
     line-height: 30px;
     letter-spacing: 2px;
@@ -222,13 +227,13 @@
 
 .intro {
   margin-top: 180px;
-  margin-bottom: 117px; 
+  margin-bottom: 117px;
   &__text {
     max-width: 754px;
     margin-bottom: 78px;
 
+    font-family: "Mplus1pMedium";
     font-style: normal;
-    font-weight: 500;
     font-size: 27px;
     line-height: 40px;
 
@@ -249,16 +254,16 @@
       &-title {
         margin-bottom: 13px;
 
+        font-family: "Mplus1pMedium";
         font-style: normal;
-        font-weight: 500;
         font-size: 27px;
         line-height: 40px;
 
         color: $black;
       }
       &-text {
+        font-family: "Mplus1p ";
         font-style: normal;
-        font-weight: normal;
         font-size: 16.2px;
         line-height: 26px;
 
